--- a/app/src/main/res/layout/activity_multi_choise.xml
+++ b/app/src/main/res/layout/activity_multi_choise.xml
@@ -38,8 +38,10 @@
                     android:id="@+id/pregunta"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="left|center_vertical"
-                    android:paddingLeft="24dp" />
+                    android:gravity="bottom|left|center_vertical"
+                    android:paddingLeft="24sp"
+                    android:paddingBottom="24sp"
+                    android:text="Texto" />
             </LinearLayout>
 
             <LinearLayout
@@ -62,8 +64,8 @@
     <LinearLayout
         android:id="@+id/error"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:background="#C3BFBF"
         android:orientation="horizontal">
 
@@ -73,7 +75,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:paddingLeft="76dp"
+            android:paddingLeft="24dp"
+            android:paddingEnd="24sp"
             android:text="                            " />
     </LinearLayout>
 </LinearLayout>
