--- a/app/src/main/res/layout/activity_cardinal.xml
+++ b/app/src/main/res/layout/activity_cardinal.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".activity.Cardinal">
 
+    <Button
+        android:id="@+id/button35"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#18FFFF" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
