--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -4,8 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="right|end"
     android:orientation="vertical"
-    tools:context=".activity.Example" >
+    tools:context=".activity.Example">
+
+    <TextView
+        android:id="@+id/faltante"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="hola mundo" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -19,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:columnCount="6"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
     </HorizontalScrollView>
 
     <HorizontalScrollView
