con  base de datos

--- a/app/src/main/res/layout/activity_activate.xml
+++ b/app/src/main/res/layout/activity_activate.xml
@@ -11,7 +11,7 @@
         android:id="@+id/button36"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FF4081" />
+        android:text="Activate" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,15 +52,24 @@
             android:layout_weight="8"
             android:ems="10"
             android:hint="Type here"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:paddingRight="16dp" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="0dp"
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?android:attr/listDivider" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:clickable="true"
             android:onClick="comprobar"
-            android:text="Button" />
+            app:srcCompat="@drawable/forward" />
 
     </LinearLayout>
 </LinearLayout>
