--- a/app/src/main/res/layout/activity_cardinal.xml
+++ b/app/src/main/res/layout/activity_cardinal.xml
@@ -11,7 +11,7 @@
         android:id="@+id/button35"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#18FFFF" />
+        android:text="Cardinal" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,13 +54,21 @@
             android:hint="Type here"
             android:inputType="textPersonName" />
 
-        <Button
-            android:id="@+id/button2"
+        <View
+            android:id="@+id/divider3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?android:attr/listDivider" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:clickable="true"
             android:onClick="comprobar"
-            android:text="Button" />
+            app:srcCompat="@drawable/forward" />
 
     </LinearLayout>
 </LinearLayout>
