--- a/app/src/main/res/layout/activity_complete.xml
+++ b/app/src/main/res/layout/activity_complete.xml
@@ -18,14 +18,15 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="6"
-            android:background="#40C4FF">
+            android:background="#91CBE4">
 
             <LinearLayout
                 android:id="@+id/layaut_texto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#40C4FF"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="8dp">
 
                 <TextView
                     android:id="@+id/texto"
@@ -40,7 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:background="#EEFF41"
+            android:background="#C0E6B0"
             android:paddingStart="16dp">
 
             <LinearLayout
@@ -56,13 +57,16 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="end"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingEnd="16dp">
 
-        <Button
-            android:id="@+id/button4"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton7"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
             android:onClick="check"
-            android:text="Button" />
+            app:srcCompat="@drawable/forward" />
     </LinearLayout>
 </LinearLayout>
