--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -23,13 +23,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:gravity="right"
+        android:orientation="vertical"
+        android:paddingEnd="16dp">
 
-        <Button
-            android:id="@+id/enter"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton6"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
             android:onClick="comparar"
-            android:text="Enter" />
+            app:srcCompat="@drawable/forward" />
     </LinearLayout>
 </LinearLayout>
