--- a/app/src/main/res/layout/activity_activate.xml
+++ b/app/src/main/res/layout/activity_activate.xml
@@ -22,6 +22,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/preg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="TextView" />
+
+        <TextView
             android:id="@+id/respuesta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
