--- a/app/src/main/res/layout/activity_complete.xml
+++ b/app/src/main/res/layout/activity_complete.xml
@@ -47,8 +47,15 @@
             <LinearLayout
                 android:id="@+id/palabras"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+            </LinearLayout>
         </ScrollView>
     </LinearLayout>
 
