--- a/app/src/main/res/layout/activity_activate.xml
+++ b/app/src/main/res/layout/activity_activate.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.Activate">
+    tools:context="com.example.NewAllinOne.activity.Activate">
 
     <Button
         android:id="@+id/button36"
