--- a/app/src/main/res/layout/activity_cardinal.xml
+++ b/app/src/main/res/layout/activity_cardinal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.Cardinal">
+    tools:context="com.example.NewAllinOne.activity.Cardinal">
 
     <Button
         android:id="@+id/button35"
