--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/borde_redondo"
     android:onClick="prueba"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context="com.example.NewAllinOne.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,12 +15,129 @@
         android:layout_weight="10"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/caballito" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_read"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="read"
+                android:text="Read" />
+
+            <Button
+                android:id="@+id/btn_listen"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="listen"
+                android:text="Listen" />
+
+            <Button
+                android:id="@+id/btn_multichoice"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="multiChoise"
+                android:text="MultiChoice" />
+
+            <Button
+                android:id="@+id/btn_transmc"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="transMc"
+                android:text="Trans Mc" />
+
+            <Button
+                android:id="@+id/btn_match"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="match"
+                android:text="Match" />
+
+            <Button
+                android:id="@+id/btn_translation"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="translation"
+                android:text="Translation" />
+
+            <Button
+                android:id="@+id/btn_example"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="example"
+                android:text="Example" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_definiton"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="definition"
+                android:text="Definition" />
+
+            <Button
+                android:id="@+id/btn_complete"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="complete"
+                android:text="Complete" />
+
+            <Button
+                android:id="@+id/btn_read_complex"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="readComplex"
+                android:text="Read Complex" />
+
+            <Button
+                android:id="@+id/btn_hanged"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="hanged"
+                android:text="Hanged" />
+
+            <Button
+                android:id="@+id/btn_activate"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:onClick="activate"
+                android:text="Activate" />
+
+            <Button
+                android:id="@+id/btn_cardinal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="Cardinal" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
