--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.Match">
+    tools:context="com.example.NewAllinOne.activity.Match">
 
     <ScrollView
         android:layout_width="match_parent"
